assets/css/style.css
html, body{
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}
html{
    background-image: url(../images/Open_Sky.jpg);
    background-color: #776B99;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}
body{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
nav{
    z-index: 1;
    width: 100%;
    font-size: 1.5em;
    background-color: #43464b;
    top: 0;
    position: sticky;
    position: -webkit-sticky;
    border-bottom-style: solid;
    border-bottom-width: 3px;
    border-bottom-color: #cccccc;
}
h2{
    margin: 0px;
}
footer{
    width: 100%;
    background-color: #43464b;
    border-top-style: solid;
    border-top-width: 3px;
    border-top-color: #cccccc;
    color: #4aaaa5;
    text-align: center;
    font-size: 18px;
    padding: 15px 0;
}
.centered{
    text-align: center;
}
.nav-container{
    width: 80%;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin: 0 auto;
}
.logoImg{
    display: inline;
    vertical-align: bottom;
}
.logo{
    padding: 15px 0;
    width: 40%;
    text-align: center;
    background-color: #cc5500;
}
.logo a{
    color: #43464b;
    text-decoration: none;
}
#main{
    width: 80%;
    color: white;
    font-size: 1.3em;
    text-shadow: 
        2px 2px 3px black,
        -1px -1px 0 black,
        1px -1px 0 black,
        -1px 1px 0 black,
        1px 1px 0 black;
}
#main a{
    color: white;
}
#main a:hover{
    text-shadow: 2px 2px 10px #cc5500;
}
.breakBar{
    height: 5px;
    margin-bottom: 5px;
    background-color: #cccccc;
}
.projectContent{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    padding: 5px;
}
.imgText{
    position: absolute;
    width: 300px;
    bottom: 10%;
    color: white;
    background-color: #4aaaa5;
    padding-top: 5%;
    padding-bottom: 5%;
    text-align: center;
    left: 0;
}
.imgContainer{
    width: 300px;
    margin: 25px;
    position: relative;
}
.imgContainer img{
    height: 300px;
    width: 300px;
}
#aboutImg{
    float: left;
    height: 250px;
    width: auto;
    margin: 5px;
    border: 5px solid black;
}

@media only screen and (max-width: 900px){
    nav{
        position: fixed;
    }
    .nav-container{
        width: 100%;
        justify-content: center;
    }
    .logo{
        width: 100%;
    }
    #main{
        margin-top: 20%;
    }
}

@media only screen and (max-width: 600px){
    nav{
        justify-content: center;
    }
}

@media only screen and (max-width: 400px){
    html{
        background-image: none;
    }
}

